# question_answer

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/: manage.py
src/apps/accounts/: admin.py  models.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/answer/: admin.py  models.py  serializers.py  urls.py  views.py
src/apps/answer/migrations/: 0001_initial.py  0002_alter_answer_text.py
src/apps/question/: admin.py  models.py  serializers.py  urls.py  views.py
src/apps/question/migrations/: 0001_initial.py  0002_alter_question_text.py
src/core/: settings.py  urls.py
tests/: conftest.py
tests/api/: test_answer.py  test_quastion.py
